Fix bug 311110: dragging onto empty tab bar area should create new tabs, not replace existing ones. Patch partially by Chris Lawson.